@@ -5,10 +5,6 @@
     states whose labels match
     - What to do if ruleset changes under us?
 
-* NetFlow v.5 support
-  - A few extra fields
-  - Very easy
-
 * NetFlow v.9 export
   - Supports IPv6!
   - http://www.cisco.com/warp/public/cc/pd/iosw/prodlit/tflow_wp.htm
@@ -16,7 +12,7 @@
 * sflow export (www.sflow.org)
 
 * IPv6 export support
-  - Needs sflow or NetFlow v.9
+  - Needs IPFIX, sflow or NetFlow v.9
 
 * Cleanup of code
   - Kill globals in favour of ctxt
@@ -37,7 +33,8 @@
   - Upon receipt of a packet which would cause either flow counter to wrap,
     send a (new) pfsync info message with the state data
   - Reset state's counters to zero + len of current packet
-
+  - Maybe can do this by watching update messages and flagging ones close to
+    wrap
 * Kernel changes to account for generated packets
   - Which ones? ICMP is arguably not appropriate...
 
